--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,6 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.892.0",
     "@aws-sdk/s3-request-presigner": "^3.864.0",
-    "@prisma/client": "^6.16.2",
     "@types/express-session": "^1.18.2",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
@@ -35,16 +34,20 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pdf-parse": "^1.1.1",
+    "pdf2json": "^3.1.4",
     "pdfjs-dist": "^5.4.149",
-    "prisma": "^6.14.0",
     "puppeteer": "^24.16.1",
-    "react-pdf": "^10.1.0"
+    "react-pdf": "^10.1.0",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
+    "@prisma/client": "^6.16.2",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.2.1",
+    "@types/pdf-parse": "^1.1.5",
     "nodemon": "^3.1.10",
+    "prisma": "^6.16.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.5",
