--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "backend",
+  "name": "resume-ai-backend",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
+  "main": "src/index.ts",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "dev": "nodemon --no-warnings -x tsx src/index.ts",
-    "build": "tsc",
+    "build": "tsc && prisma generate",
     "start": "node dist/index.js",
-    "configure-s3": "node scripts/configure-s3.js"
+    "vercel-build": "prisma generate && tsc",
+    "configure-s3": "node scripts/configure-s3.js",
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +25,7 @@
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/react-pdf": "^6.2.0",
+    "@prisma/client": "^6.16.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
@@ -41,7 +47,6 @@
     "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
-    "@prisma/client": "^6.16.2",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.2.1",
